realtime storage w/ firebase, history activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             </intent-filter>
         </activity>
         <activity android:name="SaveScan" />
+        <activity android:name="History" />
     </application>
 
 </manifest>
