--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation 'com.android.support:design:28.0.0' // recommend upgrade to android X?
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
 }
